# toy-sw-renderer

./: .gitignore  Cargo.toml  IDEAS.md  README.md
benches/: line_bench.rs  triangle_bench.rs
src/: lib.rs  main.rs  math.rs  mesh.rs  obj.rs  objmodel.rs  renderer.rs  tgaimage.rs  threelines.rs  wireframe.rs
src/math/: hvec.rs
src/renderer/: camera.rs  context.rs  line.rs  lines.rs  mesh.rs  mesh_wireframe.rs  triangle.rs
