[package]
name = "toy-sw-renderer"
version = "0.1.0"
edition = "2021"

[lib]
name = "swrender"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "line-bench"
harness = false
path = "benches/line_bench.rs"

[[bench]]
name = "triangle-bench"
harness = false
path = "benches/triangle_bench.rs"

[profile.release]
debug = 1
